force-app/main/default/objects/Time_Zone__c/Time_Zone__c.object-meta.xml
<CustomObject>
    <description>Custom Time Zone Table to use as a lookup table. Specific Time Zones will be loaded in the table with a translation to an Xstore time zone code.</description>
    <label>Time Zone</label>
    <nameField>
        <label>Time Zone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>