force-app/main/default/objects/Time_Zone__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the Time Zone is still relevant</description>
    <inlineHelpText>Indicates if the Time Zone is still relevant</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>