force-app/main/default/objects/Time_Zone__c/fields/Time_Zone_Description__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Description__c</fullName>
    <description>The long description for time zone</description>
    <inlineHelpText>Time Zone Long Name</inlineHelpText>
    <label>Time Zone Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>