force-app/main/default/objects/Time_Zone__c/fields/Xstore_Time_Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Xstore_Time_Zone_Code__c</fullName>
    <description>The code Xstore uses for a TIme Zone</description>
    <inlineHelpText>Xstore Time Zone Code</inlineHelpText>
    <label>Xstore Time Zone Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>